--- a/configs/menu.yml
+++ b/configs/menu.yml
@@ -1,1 +1,16 @@
-Disponível nas próximas atualizações!
+Titulo: "Warps"
+# Fileiras: Caso seja maior que 6, será a quantidade de slots (ex: 35).
+Fileiras: 5
+# Slots: Slots que os itens de warp poderão estar.
+Slots: [10, 11, 12, 13, 14, 15, 16, 19, 20, 21, 22, 23, 24, 25]
+Opcoes:
+  # Apenas-com-permissao: Fará que só apareça as warps que o jogador tenha permissão.
+  Apenas-com-permissao: true
+Itens:
+  Flecha:
+    nome: '&aVoltar'
+    item: '262:0'
+    slot: 36
+    lore:
+      - '&7Clique para fechar o menu.'
+    fecharMenu: true
